RESOLVED FIXED209555
AX: WKTR: Don't update isolated tree mode behavior if not required
https://bugs.webkit.org/show_bug.cgi?id=209555
Summary AX: WKTR: Don't update isolated tree mode behavior if not required
chris fleizach
Reported 2020-03-25 12:45:24 PDT
If isolated tree mode has not changed, then we should not poke at the mechanisms for turning it on/off because it might cause accessibility to be enabled
Attachments
patch (1.69 KB, patch)
2020-03-25 12:47 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-25 12:45:32 PDT
chris fleizach
Comment 2 2020-03-25 12:47:27 PDT
EWS
Comment 3 2020-03-26 11:45:05 PDT
Committed r259060: <https://trac.webkit.org/changeset/259060> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394528 [details].
Note You need to log in before you can comment on or make changes to this bug.