AX: WKTR: Don't update isolated tree mode behavior if not required https://bugs.webkit.org/show_bug.cgi?id=209555 <rdar://problem/60885094>

Reviewed by Darin Adler.

If the isolated tree mode has not changed, then we should not poke at the mechanisms for turning it on/off.
This might have the side effect of turning on accessibility unexpectedly.

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
(WTR::AccessibilityController::setAccessibilityIsolatedTreeMode):


Canonical link: https://commits.webkit.org/222536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259060 268f45cc-cd09-0410-ab3c-d52691b4dbfc